# python-ai-katas

./: .gitignore  .ossignore  404.html  CLAUDE.MD  README.md  index.html  katas-index.json  todo.md
backend/rust/: Cargo.toml  todo.md
backend/rust/content/foundational-ai/phase-0/: 02-what-is-a-feature.md  04-what-is-signal.md
backend/rust/content/foundational-ai/phase-1/: 01-constant-predictor.md  03-distance-based-prediction.md  04-linear-regression.md  05-loss-functions.md  07-overfitting-vs-underfitting.md
backend/rust/content/foundational-ai/phase-2/: 03-convergence-vs-divergence.md  05-pytorch-tensors.md
backend/rust/content/foundational-ai/phase-3/: 01-single-neuron.md  02-multi-layer-perceptron.md  04-vanishing-gradients.md
backend/rust/content/foundational-ai/phase-4/: 01-handcrafted-vs-learned-features.md  04-visualizing-hidden-layers.md
backend/rust/content/foundational-ai/phase-5/: 03-filters-as-pattern-detectors.md  04-feature-maps.md  05-pooling-effects.md
backend/rust/content/foundational-ai/phase-6/: 03-lstm-limitations.md  04-why-recurrence-struggles-at-scale.md
backend/rust/content/foundational-ai/phase-7/: 04-why-transformers-scale.md
backend/rust/content/foundational-ai/phase-8/: 01-tokenization.md  05-emergence-through-scale.md
backend/rust/content/foundational-ai/phase-9/: 02-scratchpads.md  (+1 more)
backend/rust/src/: config.rs  main.rs
backend/rust/src/models/: execution.rs  kata.rs
backend/rust/src/routes/: execute.rs  execute_stream.rs  katas.rs  mod.rs  tracks.rs
backend/rust/src/services/: mod.rs  preamble.rs  sandbox.rs
(+336 files in other folders)
