[package]
name = "ai-katas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tempfile = "3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
